fix for stretched images

--- a/wp-content/themes/makerfaire/less/quora.less
+++ b/wp-content/themes/makerfaire/less/quora.less
@@ -3250,7 +3250,7 @@ img.attachment-post-thumbnail{width:100%;height:auto;}
         color: #D3D3D3 !important;
     }
     .textSearch span,.textSearch input {padding: 3px 10px;}
-    .projImg{width: 100%;height: 270px;}
+    .projImg{height: 270px; width: auto;max-width: 100%;border:thin solid grey}
     .bluedata,.reddata{    padding: 5px; margin: 5px;float: left;font-size:12px;}
     .bluedata{background-color: #0e7db5}
     .reddata{background-color: #ff0000}
@@ -3330,13 +3330,15 @@ img.attachment-post-thumbnail{width:100%;height:auto;}
     .box.active{
         background-color: #085a7e;
         color:#fff
-    }    
+    }  
+    .ribbonGrid,.ribbonList{margin-bottom: 20px;}
+    
     .ribbonList{
         .blueRibbon,.redRibbon,.redMakey,.blueMakey
         { float:none}
         .ribbonTitle div{display: inline-block; vertical-align: middle;}
         .ribbonTitle{padding-top:2em;font-size:1.4em;}
-    }
+    }   
 }
 
 /* maker admin */
